--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Juska <juseljus@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pygame = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
